# Templates

./: README.md
vscode_cmake/: CMakeLists.txt  README.md  launch.json  tasks.json
vscode_makefile/: Makefile  README.md  launch.json  tasks.json
